# web-hw09-Web-scraping

./: .gitignore  README.md  authors.json  config.ini  main.py  models.py  pyproject.toml  quotes.json  seed_db_hw9.py
