[tool.poetry]
name = "web-hw09-web-scraping"
version = "0.1.0"
description = ""
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"
packages = [{include = "web_hw09_web_scraping"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
